src/objects/Product_Data_Sheet__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint Drop</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Coating_Type__c</fullName>
        <label>Coating Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spray</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Data_Sheet_Attachment__c</fullName>
        <label>Product Data Sheet Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <label>Search Tag</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Data Sheet</label>
    <pluralLabel>Product Data Sheets</pluralLabel>
</CustomObject>